objects/AccountContactRelation.object
<CustomObject>
    <fields>
        <fullName>Relationship_Strength__c</fullName>
        <label>Relationship Strength</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Strong</fullName>
                </value>
                <value>
                    <fullName>Neutral</fullName>
                </value>
                <value>
                    <fullName>Weak</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_ins__IsPrimaryRelationship__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Represents the primary relationship among all the relationships for a Contact with Accounts. For example, the Primary Provider Location where a Provider serves.</description>
        <label>Primary Relationship</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__OperatingHoursId__c</fullName>
        <description>Operating Hours for a Contact, specific to an Account. For example, the Operating Hours of a Provider at a specific Provider Location.</description>
        <label>Operating Hours</label>
        <length>80</length>
        <type>Text</type>
    </fields>
</CustomObject>